# cmd/server.go
@@ -45,6 +45,11 @@ func init() {
 
 // @host localhost:8080
 // @BasePath /api/v1
+
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and JWT token.
 func startServer() {
 	// 初始化配置
 	if err := config.Init(); err != nil {
